submenu Funkbereich / navbar open body overflow hidden / overlay transparent gray

--- a/assets/template/footer.html
+++ b/assets/template/footer.html
@@ -1,22 +1,10 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <script src="../javascript/main.js"></script>
-    <title>header Charly Tango</title>
-</head>
-<body>
+
+
     <div class="footer d-flex  align-center column">
         <div class="w-100 d-flex justify-around">
             <a href="#">Impressum</a>
-            <a href="#">Kontakt</a>
+            <a href="./neues-mitglied.html">Kontakt</a>
         </div>
         <h2>"CHARLY TANGO, OVER AND OUT!"</h2> 
         <p>&COPY NILS NEHRING</p>   
     </div>
-</body>
-</html>
