--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,22 @@
          url('../fonts/roboto-mono-v22-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
 
-  body {
+
+body{
+    font-family: 'Roboto Mono';
+    color: white;
+}
+
+strong{
+    font-size: 28px;
+}
+
+.roboto-mono{
     font-family: "Roboto Mono";
+}  
+
+.overflow-hidden{
+    overflow: hidden;
   }
 
 .bg-page{
@@ -30,6 +44,8 @@
     box-shadow: 1px 1px 1px 0px black;
 }
 
+
+
 .header-content{
     margin-top: 70px;
     font-size: 24px;
@@ -38,11 +54,12 @@
 
 .welcome-text p{
     font-family:  'Roboto Mono';
-    font-size: 20px;;
+    font-size: 20px;
 }
 .welcome-text h1{
     font-size: 42px;
     margin-left: 120px;
+    text-shadow: 4px 3px 0 #171515;
 }
 
 .margin-top-30px{
@@ -108,7 +125,19 @@
 
 .w-70{
     width: 70%;
+
 }
+
+.w-50{
+    width: 50%;
+
+}
+
+.w-30{
+    width: 30%;
+
+}
+
 /* 
  #navImg {
     -moz-transform: translate(0px, -60px);
@@ -346,6 +375,61 @@ nav.active a {
 
 }
 
+#cbChannelList {
+    border-collapse: collapse;
+    width: 50%;
+  }
+  
+#cbChannelList td, #memberList th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+#cbChannelList tr:nth-child(even){
+    background-color: #f2f2f2;
+}
+  
+#cbChannelList tr:hover {
+    background-color: rgb(50, 48, 48);
+    color: lime;
+
+}
+  
+#cbChannelList th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: #04AA6D;
+    color: white;
+
+}
+
+.qCode {
+    border-collapse: collapse;
+    width: 50%;
+  }
+  
+.qCode td, #memberList th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+
+  
+.qCode tr:hover {
+    background-color: rgb(50, 48, 48);
+    color: lime;
+
+}
+  
+.qCode th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: #04AA6D;
+    color: white;
+
+}
+
 #microphoneAssignment {
     border-collapse: collapse;
     width: 70%;
@@ -431,6 +515,8 @@ nav.active a {
 
 }
 
+
+
 #preFixList{
     max-width: 60%;
 
@@ -467,17 +553,8 @@ nav.active a {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: solid 2px black;
     background-color: rgba(39, 74, 77, 0.25);
-    color: white;
-    width: 320px;
-    height: 75px;
-    padding: 6px;
-    margin: 15px;
     text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     border: solid 2px black;
     border-radius: 12px;
     background-color: rgba(39, 74, 77, 0.25);
@@ -485,7 +562,7 @@ nav.active a {
     width: 320px;
     height: 75px;
     padding: 6px;
-    margin: 5px;
+    margin: 15px;
     text-align: center;
     -webkit-box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgb(0 0 0 / 0%);
     box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgb(0 0 0 / 0%);
@@ -532,6 +609,15 @@ nav.active a {
     background: #b30000; 
   }
 
+  .overlay{ 
+    background-color: rgba(0,0,0,75%);
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
+
 .open-start-page-btn {
     position: absolute;
     left: 50%;
@@ -551,4 +637,77 @@ nav.active a {
 
 .radio{
     width: 240px;
+}
+
+
+.radio-content-container div{
+    width: 350px;
+    background-color: #1095b0;
+    margin-top: 5px;
+    display: flex;
+    align-items: center;
+    padding: 12px;
+    text-align: left;
+    border-bottom: solid 3.5px white;
+    color: white;
+}
+
+.radio-image-container img{
+    width: 85px;
+    height: 85px;
+    padding: 6px;
+    background-color: white;
+    margin: 10px;
+    object-fit: contain;
+    border-radius: 12px;
+    border: 1px solid black;
+}
+
+.cb-history-content{
+    width: 50%;
+}
+
+ul{
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+li{
+    padding: 24px;
+    justify-content: center;
+}
+
+.cb-regulate-content{
+    border: solid 1px black;
+    border-radius: 24px;
+    padding: 24px;
+    margin-top: 25px;
+    -webkit-box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgb(0 0 0 / 0%);
+    box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgb(0 0 0 / 0%);
+
+}
+
+.cb-regulate-content:hover{
+    background-color:rgba(152, 220, 232, 0.35);
+
+}
+
+.speech-content div{
+    padding-bottom: 6px;
+    padding-top: 6px;
+    border-bottom: 2.5px solid white;
+    width: 50%;
+
+}
+
+.letterHeadline{
+    font-size: 43px;
+    text-align: center;
+    color: white;
+    text-shadow: 4px 3px 0 #171515;
+    border: 1px solid white;
+    border-radius: 12px;
+    box-shadow: 1px 1px 1px 1px black;
 }
