--- a/assets/template/header.html
+++ b/assets/template/header.html
@@ -1,8 +1,9 @@
+  
     <div id="header" class="header w-100">
         <div class="d-flex justify-around align-center">
-            <img src="./assets/img/funk00010.gif" alt="">
+            <img class="mobile-hide" src="./assets/img/funk00010.gif" alt="">
             <img src="./assets/img/ban_ctfrac.png" alt="">
-            <img src="./assets/img/flags.gif" alt="">
+            <img class="mobile-hide" src="./assets/img/flags.gif" alt="">
         </div>    
         <div class="d-flex justify-center txt-center">
             <p class="header-content">
@@ -12,7 +13,7 @@
                 SSTV 26.685 FM
             </p>
         </div>
-        <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
+        <div class="d-flex w-100 justify-center margin-bottom-30px">
             <img src="./assets/img/kodax-02.gif" alt="">
         </div>
         <div class="welcome-text">
@@ -22,3 +23,4 @@
             </h1>   
         </div>        
     </div>
+   
