--- a/assets/template/navbar.html
+++ b/assets/template/navbar.html
@@ -34,7 +34,7 @@
                         <a href="./cb-sprache.html">CB-Sprache</a>
                         <a href="./cb-regeln.html">Regeln</a>
                         <a href="./cb-notruf.html">Notruf</a>
-                        <a href="#">CB-Funk SWR</a>
+                        <a href="./cb-swr.html">CB-Funk SWR</a>
                     </nav>  
                         <!--Allgemeines-->
                     <nav class="d-flex column txt-center"  onclick="openNavEntry(event)">
