styling all table

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,4 +1,4 @@
-@media(max-width: 1440px){
+@media(max-width: 1540px){
             
     .mobile-hide{
         display: none;
@@ -11,8 +11,8 @@
 
     .mobile-table tbody{
         display: flex;
-        /* overflow-x: auto;
-        overflow-y: hidden; */
+        overflow-x: auto;
+        overflow-y: hidden;
         -webkit-overflow-scrolling: touch;
     }
     .mobile-table tr{
@@ -21,12 +21,6 @@
         flex-shrink: 0;
 
     }
-    .mobile-table td{
-        height: 45px;
-    }
-    .mobile-table th{
-        height: 39px;
-        padding: 0;
-    }
+    
  
 }            
