--- a/assets/template/navbar-top.html
+++ b/assets/template/navbar-top.html
@@ -3,7 +3,7 @@
     <div class="nav d-flex w-100 bg-page">
         <div></div>
         <div onclick="openSTartPage()" class="open-start-page-btn">
-            <img id="navImg" class="navbarbanner d-none" src="./assets/img/bannercut.png" alt="">
+            <img id="navImg" class="navbarbanner" src="./assets/img/bannercut.png" alt="">
         </div>
 
         <div onclick="openCtMenu()" class="main-menu">HAUPTMENÜ</div>
