set headlines on subpages

--- a/assets/template/navbar.html
+++ b/assets/template/navbar.html
@@ -13,7 +13,7 @@
                         <a href="./about-us.html">Über CharlyTango</a>
                         <a href="./ct-today.html">CharlyTango Heute</a>
                         <a href="./in-memorian.html">In Gedanken</a>
-                        <a href="./neues-mitglied.html">Neuanmeldung</a>
+                        <a href="./neues-mitglied.html">Neuanmeldung & Kontakt</a>
                         <a href="./mitglieder-liste.html">Mitgliederliste</a>
                         <a href="./neue-mitglieder.html">Neue Mitglieder</a>
                         <a href="./qsl-karten.html">QSL-Karten</a>
