--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,8 @@ strong{
     font-size: 20px;
 }
 .welcome-text h1{
+    position: absolute;
+    bottom: 50%;
     font-size: 42px;
     margin-left: 120px;
     text-shadow: 4px 3px 0 #171515;
@@ -96,8 +98,8 @@ strong{
 }
 
 .footer{
-    font-family:  'Roboto Mono';
-    min-height: 35vh;
+    font-family: 'Roboto Mono';
+    min-height: 24vh;
     background-color: #00aef7;
     border-top: 5px solid white;
     box-shadow: 0px 1px 1px 2px black;
@@ -105,7 +107,7 @@ strong{
 }
 
 .footer a{
-    font-size: 36px;
+    font-size: 17px;
     font-weight: bolder;
     color: white;
     text-decoration: none;
@@ -117,12 +119,12 @@ strong{
 }
 
 .footer h2{
-        font-size: 36px;
+        font-size: 24px;
         color: red;
 }
 
 .footer p{
-    font-size: 18px;
+    font-size: 12px;
     color: white;
 }
 
