--- a/assets/template/header.html
+++ b/assets/template/header.html
@@ -1,10 +1,7 @@
   
     <div id="header" class="header w-100">
         <div class="welcome-text">
-            <h1 id="headLine">
-                Herzlich Willkommen bei<br>
-                DX-CharlyTango
-            </h1>   
+            <h1 id="headLine"></h1>   
         </div>        
     </div>
    
