--- a/assets/template/navbar.html
+++ b/assets/template/navbar.html
@@ -2,10 +2,7 @@
 
     <div id="submenu" class="submenu navbar d-none d-flex">
         <div>
-            <img onclick="closeSubMenu()" class="cross" src="./assets/img/cross.png" alt="Close menu Cross"> 
-            
-            
-
+            <!-- <img onclick="closeSubMenu()" class="cross mobile-hide" src="./assets/img/cross.png" alt="Close menu Cross">  -->
             <div class="navbar flex-wrap">
                         <!-- CT-hauptmenü -->
                     <nav class="d-flex column txt-center active" onclick="openNavEntry(event)">
