--- a/assets/template/newheader.html
+++ b/assets/template/newheader.html
@@ -2,7 +2,7 @@
     <div id="headerImageContainer" class="header-container">
         <div class="txt-cont">
             <h1>
-                Herzlich Willkommen bei<br>
+                Herzlich Willkommen<br> bei
                 DX-CharlyTango
             </h1>
         </div>       
