--- a/assets/template/navbar-top.html
+++ b/assets/template/navbar-top.html
@@ -1,13 +1,14 @@
 
 <body>
     <div class="nav d-flex w-100 bg-page">
+        <img  onclick="openCtMenu()" id="navImg" class="navbarbanner d-none mobile-d-flex" src="./assets/img/square.png" alt="">
+
         <div></div>
         <div onclick="openSTartPage()" class="open-start-page-btn">
             <img id="navImg" class="navbarbanner" src="./assets/img/bannercut.png" alt="">
         </div>
 
-        <div onclick="openCtMenu()" class="main-menu">HAUPTMENÜ</div>
-
+        <div onclick="openCtMenu()" class="main-menu mobile-hide">HAUPTMENÜ</div>
       
         <!-- <div onclick="openCtMenu()" class="main-menu">Startseite</div> -->
     </div>
