--- a/assets/css/newheader.css
+++ b/assets/css/newheader.css
@@ -23,6 +23,17 @@
     bottom: 15%;
 }
 
+@media(max-width: 1024px){
+    .header-container h1{
+        font-size: 2.2rem;
+    }
+
+    .txt-cont{
+        position: absolute;
+        bottom: 25%;
+    }
+}
+
 @media(max-width: 768px){
     .header-container{
         padding-bottom: 0px;
