--- a/assets/template/newheader.html
+++ b/assets/template/newheader.html
@@ -1,9 +1,23 @@
 
-    <div id="headerImageContainer" class="header-container">
+    <!-- <div id="headerImageContainer" class="header-container">
+        <div class="image-silder">
+            <div class=""><img class="index-image-slider" src="./assets/img/antenne2.png" alt=""></div>
+            <div class=""><img class="index-image-slider" src="./assets/img/antenne3.png" alt=""></div>
+            <div class=""><img class="index-image-slider" src="./assets/img/antenne1.png" alt=""></div>
+            <div class=""><img class="index-image-slider" src="./assets/img/antenne2.png" alt=""></div>
+            <div class=""><img class="index-image-slider" src="./assets/img/antenne3.png" alt=""></div>
+        </div>    
         <div class="txt-cont">
             <h1>
                 Herzlich Willkommen<br> bei
                 DX-CharlyTango
             </h1>
         </div>       
-    </div>
+    </div> -->
+
+    
+
+    
+
+
+
