--- a/assets/template/navbar-top.html
+++ b/assets/template/navbar-top.html
@@ -1,8 +1,5 @@
-
-<body>
-    <div class="nav d-flex w-100 bg-page">
+    <div class="nav d-flex w-100 bg-page bounce-in-top">
         <img  onclick="openCtMenu()" id="navImg" class="navbarbanner d-none mobile-d-flex" src="./assets/img/square.png" alt="">
-
         <div></div>
         <div onclick="openSTartPage()" class="open-start-page-btn">
             <img id="navImg" class="navbarbanner" src="./assets/img/bannercut.png" alt="">
