--- a/assets/template/footer.html
+++ b/assets/template/footer.html
@@ -6,5 +6,5 @@
             <a href="./neues-mitglied.html">Kontakt</a>
         </div>
         <h2>"CHARLY TANGO, OVER AND OUT!"</h2> 
-        <p>&COPY NILS NEHRING</p>   
+        <p>&COPY 2023 NILS NEHRING / KEVIN HERRMANN</p>   
     </div>
