--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,18 +78,9 @@
     display: none;
   }  
 
-
-
-
 body{
     font-family: 'Roboto Mono';
     color: white;
-    /* background-image: url('../img/antenne2.png');
-    background-repeat: no-repeat;
-    background-position: bottom;
-    background-attachment: fixed;
-    background-size: 100%; */
-   
 }
 
 strong{
@@ -131,7 +122,7 @@ strong{
 
 
 .header-content{
-    margin-top: 70px;
+    margin-top: 35px;
     font-size: 24px;
     color: white;
 }
@@ -601,4 +592,15 @@ li{
     border: 1px solid white;
     border-radius: 12px;
     box-shadow: 1px 1px 1px 1px black;
+}
+
+.slick-slider{
+    -webkit-box-shadow: 0px 6px 10px 0px #000000;   
+    box-shadow: 0px 6px 10px 0px #000000;
+}
+
+
+.image-silder img {
+    width: 100%;
+    max-height: 75vh;
 }
