--- a/assets/template/footer.html
+++ b/assets/template/footer.html
@@ -2,7 +2,7 @@
 
     <div class="footer d-flex  align-center column">
         <div class="w-100 d-flex justify-around">
-            <a href="#">Impressum</a>
+            <a href="./impressum.html">Impressum</a>
             <a href="./neues-mitglied.html">Kontakt</a>
         </div>
         <h2>"CHARLY TANGO, OVER AND OUT!"</h2> 
