--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -47,7 +47,7 @@
     }
 } 
 
-@media(max-width: 768px){
+@media(max-width: 767px){
     .mobile-hide{
         display: none;
     }
@@ -58,6 +58,7 @@
         height: 38px;
         cursor: pointer;
     }
+
     .header{
         padding-bottom: 0px;
         border-bottom: none;
@@ -141,18 +142,22 @@
         height: 33px;
         cursor: pointer;
     }
-    .header-content {
-        font-size: 14px;
-    }
     .candle {
         width: 45px;
     }
+
+    .header{
+        height: 27vh;
+        padding: 0;
+        background-position: bottom;
+    }
+
     .header-content {
         font-size: 0.75rem;
         margin-top: 35px;
     }
     .welcome-text h1 {
-        bottom: 24px;
+        bottom: 1%;
         margin-left: 0;
         text-shadow: 3px 2px 0 #171515;
         width: 100%;
