--- a/assets/css/newheader.css
+++ b/assets/css/newheader.css
@@ -9,7 +9,7 @@
 
 .txt-cont{
     position: absolute;
-    bottom: 25%;
+    bottom: 30%;
 }
 
 @media(max-width: 1024px){
@@ -17,10 +17,10 @@
         font-size: 2.2rem;
     }
 
-    .txt-cont{
+    /* .txt-cont{
         position: absolute;
         bottom: 25%;
-    }
+    } */
 }
 
 @media(max-width: 768px){
@@ -34,9 +34,9 @@
     .header-container h1{
         font-size: 2rem;
     }
-    .txt-cont{
+    /* .txt-cont{
         bottom: 30%;
-    }
+    } */
     .index-image-slider{
         height: 70vh;
     }
@@ -55,9 +55,6 @@
         font-size: 1.1rem;
         text-shadow: 3px 2px #171515;
     }
-    .txt-cont{
-        bottom: 35%;
-    }
     .navbarbanner {
         height: 32px;
 }
@@ -68,18 +65,4 @@
         font-size: 0.88rem;
         text-shadow: 2px 1px #171515;
     }
-    .txt-cont{
-        bottom: 36%;
-    }
-}
-
-
-
-/* .header-img{
-    width: 100%;
-    height: 75vh;
-    overflow: hidden;
-    border-bottom: 5px solid white;
-    border-bottom-right-radius: 100%;
-
-} */
+}    
