--- a/assets/template/navbar-top.html
+++ b/assets/template/navbar-top.html
@@ -2,7 +2,7 @@
         <img  onclick="openCtMenu()" id="navImg" class="navbarbanner d-none mobile-d-flex" src="./assets/img/square.png" alt="">
         <div></div>
         <div onclick="openSTartPage()" class="open-start-page-btn">
-            <img id="navImg" class="navbarbanner" src="./assets/img/bannercut.png" alt="">
+            <img class="navbarbanner" src="./assets/img/bannercut.png" alt="">
         </div>
 
         <div onclick="openCtMenu()" class="main-menu mobile-hide">HAUPTMENÜ</div>
