--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,8 +221,7 @@ strong{
 
 }
 
-
-.nav{
+.nav {
     font-family:  'Roboto Mono';
     position: fixed;
     top: 0;
@@ -234,7 +233,30 @@ strong{
     height: 65px;
     background: linear-gradient(to bottom, rgb(12 105 122) 0%, rgba(0, 0, 0, 0) 100%);
     z-index: 10;
+}
 
+nav {
+    position: relative;
+    height: fit-content;
+}
+
+nav:before {
+    position: absolute;
+    content: "";
+    top: 12px;
+    right: 15px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+} 
+
+nav.active:before {
+    content: "";
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
 }
 
 .main-menu{
@@ -316,12 +338,28 @@ nav.active a {
 
 }
 
+#navImg{
+    margin-left: 34px;
+}
+
+.cross-container{
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(to bottom, rgb(12 105 122) 0%, rgba(0, 0, 0, 0) 100%);
+    padding: 12px 0;
+    
+}
+
 .cross{
-    position: absolute;
-    top: 45px;
-    right: 45px;
-    width: 45px;
+    width: 35px;
     cursor: pointer;
+    filter: invert(1);
+    margin-bottom: 6px;
+    margin-top: 6px;
 }
 
 .contact-form{
