--- a/assets/template/navbar.html
+++ b/assets/template/navbar.html
@@ -5,8 +5,8 @@
             <!-- <img onclick="closeSubMenu()" class="cross mobile-hide" src="./assets/img/cross.png" alt="Close menu Cross">  -->
             <div class="navbar flex-wrap">
                         <!-- CT-hauptmenü -->
-                    <nav class="d-flex column txt-center active" onclick="openNavEntry(event)">
-                        <a class="bg-green">CT - Hauptmenü</a>
+                    <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
+                        <div class="bg-green submenu-headline">CT - Hauptmenü</div>
                         <a href="./about-us.html">Über CharlyTango</a>
                         <a href="./ct-today.html">CharlyTango Heute</a>
                         <a href="./in-memorian.html">In Gedanken</a>
@@ -19,7 +19,7 @@
                     </nav>   
                         <!--Funkbereich-->
                     <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
-                        <a class="bg-green">Funkbereich</a>
+                        <div class="bg-green submenu-headline">Funkbereich</div>
                         <a href="./freie-funknetze.html">Was sind freie Funknetze</a>
                         <a href="./cb-geschichte.html">Geschichte CB-Funk</a>
                         <a href="./cb-bandplan11m.html">Bandplan CB 11m</a>
@@ -35,7 +35,7 @@
                     </nav>  
                         <!--Allgemeines-->
                     <nav class="d-flex column txt-center"  onclick="openNavEntry(event)">
-                        <a class="bg-green">Allgemeines</a>
+                        <div class="bg-green submenu-headline">Allgemeines</div>
                         <a target="_blank" href="https://www.bundesnetzagentur.de/">Bundesnetzagentur</a>
                         <a target="_blank" href="https://www.teamviewer.com/de/">TeamViewer</a>
                         <a target="_blank" href="https://www.afup.a36.de/">AFU-Prüfung</a>
@@ -49,13 +49,13 @@
                     </nav> 
                             <!--Teamspeak-Menü-->
                         <nav class="d-flex column txt-center"  onclick="openNavEntry(event)">
-                            <a class="bg-green">Teamspeak 3</a>
+                            <div class="bg-green submenu-headline">Teamspeak 3</div>
                             <a target="_blank" href="https://www.teamspeak.de/download/">TS-3 Download</a>
                             <a href="./ts3-inst-hilfe.html">TS-3 Installationshilfe</a>
                         </nav>  
                             <!--GW-Technik-Menü-->
                         <nav class="d-flex column txt-center"  onclick="openNavEntry(event)">
-                            <a class="bg-green">GW-Technik</a>
+                            <div class="bg-green submenu-headline">GW-Technik</div>
                             <a href="./gw-interface.html">Einfaches Interface</a>
                             <a target="_blank" href="https://freiesfunknetz.com/viewpage.php?page_id=258">Soundkarteninterface</a>
                             <a href="./cb-mikrofon-belegung.html">Mikrofonbelegung CB</a>
@@ -63,7 +63,7 @@
                         </nav>
                             <!--PR-Technik-->
                         <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
-                            <a class="bg-green">PR-Technik</a>
+                            <div class="bg-green submenu-headline">PR-Technik</div>
                             <a href="./pr-geschichte.html">Geschichte PR</a>
                             <a href="./was-ist-pmr.html">Was ist PR</a>
                             <a href="pr-betriebsarten.html">PR Betriebsart</a>
@@ -71,19 +71,19 @@
                         </nav>
                         <!--Weather-->
                         <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
-                            <a class="bg-green">Wetter Info</a>
+                            <div class="bg-green submenu-headline">Wetter Info</div>
                             <a target="_blank" href="http://www.unwetterzentrale.de/uwz/">Wetterwarnung</a>
                             <a target="_blank" href="https://www.blitzortung.org/en/live_lightning_maps.php">Blitzortung</a>
                         </nav>
                         <!--Allgemeine News-->
                         <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
-                            <a class="bg-green">Allgemeine News</a>
+                            <div class="bg-green submenu-headline">Allgemeine News</div>
                             <a target="_blank" href="https://funkmagazin.de/">Funkmagazin</a>
                             <a target="_blank" href="https://www.darc.de/home/">DARC</a>
                         </nav>                        
                         <!--Live-->
                         <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
-                            <a class="bg-green">Live</a>
+                            <div class="bg-green submenu-headline">Live</div>
                             <a target="_blank" href="http://funknetzdeutschland.ddnsking.com:8073/">WEB SDR Live</a>
                             <a target="_blank" href="http://www.websdr.org/"><img class="radio" src="./assets/img/radioani.gif" alt="TEST"></a>
                             <a target="_blank" href="http://2bs7fpf8ahdewu8a.myfritz.net:8901/#freq=149100000,mod=nfm,sql=-150">WEB SDR Live DM0MAX</a>
