--- a/assets/template/navbar.html
+++ b/assets/template/navbar.html
@@ -27,7 +27,7 @@
                         <a href="./pmr-bandplan.html">Bandplan PMR 446MhZ</a>
                         <a href="./cb-einsatzgebiete.html">CB Einsatzgebiete</a>
                         <a href="./cb-betriebsarten.html">CB Betriebsart</a>
-                        <a href="./cb-abkürzung.html">Abkürzungen im CB</a>
+                        <a href="./cb-abkuerzung.html">Abkürzungen im CB</a>
                         <a href="./cb-sprache.html">CB-Sprache</a>
                         <a href="./cb-regeln.html">Regeln</a>
                         <a href="./cb-notruf.html">Notruf</a>
