--- a/assets/template/navbar.html
+++ b/assets/template/navbar.html
@@ -50,6 +50,7 @@
                             <!--Teamspeak-Menü-->
                         <nav class="d-flex column txt-center"  onclick="openNavEntry(event)">
                             <div class="bg-green submenu-headline">Teamspeak 3</div>
+                            <a href="https://www.tsviewer.com/index.php?page=ts_viewer&ID=1125941" target="_blank">TS-3 Viewer</a>
                             <a target="_blank" href="https://www.teamspeak.de/download/">TS-3 Download</a>
                             <a href="./ts3-inst-hilfe.html">TS-3 Installationshilfe</a>
                         </nav>  
@@ -78,7 +79,7 @@
                         <!--Allgemeine News-->
                         <nav class="d-flex column txt-center" onclick="openNavEntry(event)">
                             <div class="bg-green submenu-headline">Allgemeine News</div>
-                            <a target="_blank" href="https://funkmagazin.de/">Funkmagazin</a>
+                            <a target="_blank" href=" https://www.funkamateur.de/">Funkmagazin</a>
                             <a target="_blank" href="https://www.darc.de/home/">DARC</a>
                         </nav>                        
                         <!--Live-->
