--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,7 +342,7 @@ nav.active a {
 }
 
 .member-menu-container{
-    display: flex;
+    display: none;
     justify-content: space-around;
     align-items: center;
     position: fixed;
@@ -352,6 +352,10 @@ nav.active a {
     background: linear-gradient(to bottom, rgb(12 105 122) 0%, rgba(0, 0, 0, 0) 100%);
     padding: 12px 0;
     
+}
+
+.member-menu-container img{
+    cursor: url(../img/searchcur.cur), auto;
 }
 
 .cross{
@@ -665,10 +669,6 @@ li{
     cursor:  url(../img/searchcur.cur), auto;
 }
 
-.member-menu-container img{
-    cursor: url(../img/searchcur.cur), auto;
-}
-
 .back {
     border: solid 1px white;
     border-radius: 12px;
@@ -690,10 +690,38 @@ li{
     background-color: rgba(0,0,0,85%);
 }
 
+.dropbtn {
+    background-color: #1095b0;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 150px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    cursor: pointer;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 .search-container{
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     flex-direction: column;
     background-color: white;
     padding: 100px;
