--- a/assets/template/navbar.html
+++ b/assets/template/navbar.html
@@ -51,6 +51,7 @@
                         <nav class="d-flex column txt-center"  onclick="openNavEntry(event)">
                             <div class="bg-green submenu-headline">Teamspeak 3</div>
                             <a href="https://www.tsviewer.com/index.php?page=ts_viewer&ID=1125941" target="_blank">TS-3 Viewer</a>
+                            <a href="ts3server://Funknetzdeutschland?channel=dx-charlytango.de%20TG1" target="_blank">TS-3 Server</a>
                             <a target="_blank" href="https://www.teamspeak.de/download/">TS-3 Download</a>
                             <a href="./ts3-inst-hilfe.html">TS-3 Installationshilfe</a>
                         </nav>  
